= Release Notes
:drivers_repo: http://ocient-archive/ocientrepo/java/jdbc

All our jdbc drivers are located {drivers_repo}[here]. 
Below is the release notes for every driver version that has customer implication.

//tag::compact[]
== 2.23 (2021-7-6)

New Features::

 * Change SET CONCURRENCY command to SET PARALLELISM 

//tag::compact[]
== 2.22 (2021-7-1)

New Features::

 * Add openJump extensions to jdbc jar.
 * Fix source command for plan execute inline.

//tag::compact[]
== 2.21 (2021-6-30)

New Features::

 * Fix new hashcode for null elements.


//tag::compact[]
== 2.20 (2021-6-28)

New Features::

 * Update list all queries metadata to match that of select * from sys.queries
 * Add more connection level settings to hashCode.

//tag::compact[]
== 2.19 (2021-6-26)

New Features::

 * Improve source command capabilities and performance

//tag::compact[]
== 2.18 (2021-6-26)

New Features::

 * Save command history across sessions

//tag::compact[] 
== 2.17 (2021-6-25)

New Features:: 

 * Include the currently set schema to the connection hashcode.

//tag::compact[] 
== 2.16 (2021-6-23)

New Features:: 

 * Fix another issue with timeoutMillis. The timeout will now work correctly with zero ping buffers.

//tag::compact[] 
== 2.15 (2021-6-21)

New Features:: 

 * For dBeaver compatability, not setting a user in driver properties will cause the driver to default to empty string.

//tag::compact[] 
== 2.14 (2021-6-17)

New Features:: 

 * Fix timeoutMillis by correctly inheriting timeoutMillis from properties.
 * Clear warnings before running executeQuery and executeUpdate.

//tag::compact[] 
== 2.13 (2021-6-09)

New Features:: 

 * Added command to SET PSO SEED for the random number generator used in PSO 
 * Remove chatty number of rows log.
 * Add remoteIp and service class to list all queries.
 * Add sleep_in_optimizer command for testing.

//tag::compact[] 
== 2.12 (2021-5-26)

New Features:: 
